# talka_recorder_rst

./: .gitignore
screencapturekit-rs-main/: Cargo.toml
screencapturekit-rs-main/examples/16_full_metal_app/: DEBUG_APP.md  DISTRIBUTION_GUIDE.md  FIX_NOTARIZATION.md  NOTARIZATION_GUIDE_commit.md  QUICK_FIX.md  TalkaCapturePro.entitlements  TalkaRecall.entitlements  auth.rs  build_and_distribute.sh  bundle_and_sign.sh  create_icon.sh  dioxus_ui.rs  install_apple_certificates.sh  main.rs  overlay.rs  preview_window.rs  recording.rs  resign_app.sh  setup_certificate.sh  test_auth.rs  test_auth_minimal.rs  test_auth_server.sh  test_port.sh  ui.rs  upload.rs
screencapturekit-rs-main/examples/16_full_metal_app/assets/: main.css  talka_logo.icns
