[package]
name = "screencapturekit"
version = "1.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/doom-fish/screencapturekit-rs"
repository = "https://github.com/doom-fish/screencapturekit-rs"
documentation = "https://doom-fish.github.io/screencapturekit-rs/screencapturekit/"
description = "Safe Rust bindings for Apple's ScreenCaptureKit framework - screen and audio capture on macOS"
authors = ["Per Johansson <per@doom.fish>"]
keywords = ["screencapturekit", "screen-capture", "macos", "video", "audio"]
categories = ["multimedia", "os::macos-apis", "api-bindings"]
rust-version = "1.70"
readme = "README.md"
build = "build.rs"
include = [
    "src/**/*",
    "swift-bridge/Package.swift",
    "swift-bridge/Sources/**/*",
    "build.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE-*",
    "CHANGELOG.md",
]

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

[lib]
name = "screencapturekit"
crate-type = ["lib"]

[features]
default = []
cargo-clippy = []

# Async support (executor-agnostic, works with any async runtime)
async = []

# cpal audio integration for zero-copy audio playback
cpal = ["dep:cpal"]

# macOS version feature flags
# Enable features for specific macOS versions
macos_13_0 = []
macos_14_0 = ["macos_13_0"]
macos_14_2 = ["macos_14_0"]
macos_14_4 = ["macos_14_2"]
macos_15_0 = ["macos_14_4"]
macos_15_2 = ["macos_15_0"]
macos_26_0 = ["macos_15_2"]

[dependencies]
cpal = { version = "0.15", optional = true }
futures = "0.3.31"
openid = "0.15.0"
tokio-stream = "0.1.17"
warp = { version = "0.4.2", features = ["server"] }

[dev-dependencies]
png = "0.17"
tokio = { version = "1.40", features = ["sync", "rt", "rt-multi-thread", "macros", "test-util", "fs"] }
metal = "0.29"
cocoa = "0.25"
core-graphics-types = "0.1"
objc = "0.2"
winit = "0.28"
raw-window-handle = "0.5"
talka_agent = { path = "../talka_agent" }
anyhow = "1.0"
env_logger = "0.11"
log = "0.4"
reqwest = { version = "0.11", features = ["json", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"

[package.metadata.docs.rs]
# Build documentation with all features enabled
all-features = true
# docs.rs builds on Linux, but this crate only works on macOS
default-target = "x86_64-apple-darwin"
targets = ["x86_64-apple-darwin", "aarch64-apple-darwin"]
# Enable rustdoc unstable features for better docs
rustdoc-args = ["--cfg", "docsrs"]

[[example]]
name = "16_full_metal_app"
path = "examples/16_full_metal_app/main.rs"
required-features = ["macos_14_0"]

[[example]]
name = "17_livekit_recorder"
path = "examples/17_livekit_recorder/main.rs"
required-features = ["macos_14_0"]
